--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation project(':ftplibrary')
+//    implementation project(':ftplibrary')
+    implementation 'com.hd:ftpgg:1.0'
     implementation 'com.hd.splashscreen:splashscreen:1.4'
 }
